# fuzzwise

./: .env.example  .gitignore  README.md  pyproject.toml  run_comparison.sh  run_comparison_gitea.sh  run_gitea_fair.sh  run_petstore_fair.sh
data/dictionaries/: booleans.json  strings.json
data/llm_payloads/: llm_payloads_qwen2.5_7b.json  llm_payloads_qwen2.5_7b_batch.json
data/llm_payloads/gitea/: llm_payloads_qwen2.5_7b_batch.json
data/specs/: gitea.json  gitea_user.json  gitea_user_issue.json  petstore.yaml
docker/: docker-compose.yaml
fuzzwise/: __init__.py  cli.py
fuzzwise/analysis/: __init__.py
fuzzwise/fuzzer/: __init__.py  engine.py  explorer.py  llm_explorer.py  state.py
fuzzwise/llm/: __init__.py  client.py  pregenerate.py  pregenerate_batch.py  prompts.py
fuzzwise/models/: __init__.py  types.py
fuzzwise/spec/: __init__.py  dependencies.py  parser.py
fuzzwise/strategies/: __init__.py  base.py  dictionary.py  llm.py  llm_pregenerated.py
tests/fixtures/: petstore_minimal.yaml
