[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuzzwise"
version = "0.1.0"
description = "LLM-augmented stateful fuzz testing for REST APIs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Kevin Shi" },
    { name = "Darian Wong" },
    { name = "Ryan Kwan" },
]
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "jsonschema>=4.22.0",
    "ollama>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.4.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.0",
    "types-jsonschema>=4.22.0",
]

[project.scripts]
fuzzwise = "fuzzwise.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (enforce type hints)
    "SIM", # flake8-simplify
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN201", # Missing return type for public functions (too noisy for stubs)
    "ANN202", # Missing return type for private functions
    "ANN204", # Missing return type for __init__
]

[tool.ruff.lint.isort]
known-first-party = ["fuzzwise"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
